# dga

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/dga/: Cargo.toml
crates/dga/src/: app.rs  lib.rs  main.rs
crates/dga/src/download/: mod.rs
crates/dga/src/home/: mod.rs  preview.rs  search.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/icons/: Cargo.toml
crates/icons/src/: lib.rs
crates/magnet/: Cargo.toml
crates/magnet/src/: error.rs  item.rs  lib.rs
crates/magnet/src/finder/: mod.rs  u3c3.rs
crates/magnet/src/finder/javdb/: item.rs  mod.rs  selectors.rs
crates/magnet/src/finder/madou/: item.rs  mod.rs  selectors.rs
crates/magnet/src/finder/u3c3/: item.rs  mod.rs  selectors.rs
crates/runtime/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
