[workspace]
resolver = "2"
members = [
    "crates/assets",
    "crates/dga",
    "crates/error",
    "crates/icons",
    "crates/magnet",
    "crates/runtime",
    "crates/utils",
]

[workspace.dependencies]
assets = { path = "crates/assets" }
icons = { path = "crates/icons" }
magnet = { path = "crates/magnet" }
error = { path = "crates/error" }
runtime = { path = "crates/runtime" }
utils = { path = "crates/utils" }

ui = { git = "https://github.com/longbridge/gpui-component" }
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "export-platform-window" }
reqwest_client = { git = "https://github.com/huacnlee/zed.git", branch = "export-platform-window" }
rust-embed = "8.5.0"
anyhow = "1.0.95"
reqwest = { version = "0.12.10", features = ["brotli", "deflate", "gzip"] }
thiserror = "2.0.9"
async-trait = "0.1.83"
scraper = "0.22.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
lazy_static = "1.5.0"
chrono = "0.4.39"
qbit-rs = "0.4.6"
url = "2.5.4"
whoami = "1.5.2"
bon = "3.3.2"
fuzzy-matcher = "0.3.7"
base64 = "0.22.1"

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
