[package]
name = "magnet"
version = "0.1.0"
edition = "2021"

[dependencies]
error.workspace = true
runtime.workspace = true

reqwest.workspace = true
async-trait.workspace = true
gpui.workspace = true
scraper.workspace = true
chrono.workspace = true
bon.workspace = true
fuzzy-matcher.workspace = true
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
